src/objects/Recommendation__c.object
<CustomObject>
    <fields>
        <fullName>Book__c</fullName>
        <label>Book</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>Recommendations</relationshipLabel>
        <relationshipName>Recommendations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Review</label>
        <type>TextArea</type>
    </fields>
    <label>Recommendation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Recommendation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommendations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>